[package]
name = "logflume"
version = "0.0.2"
edition = "2021"
description = "A low latency logging library 🪵."
license = "MIT"

[dependencies]
chrono = "0.4.22"
core_affinity = "0.5.10"
log = { version = "0.4.17", features = ["std"] }
crossbeam-channel = "0.5"
lockfree = "0.5.1"

[dev-dependencies]
log4rs = "1.1.1"

[[example]]
name = "basic"
